<resources>
    <string name="app_name" translatable="false">Sharikov</string>
    <string name="menu_home">Listen</string>
    <string name="menu_pray">Pray</string>
    <string name="menu_books">Books</string>
    <string name="menu_grow">Grow</string>
    <string name="menu_setting">Setting</string>
    <string name="language">Language</string>
    <string name="podcast">Podcast</string>
    <string name="musicPlayer">Music\nPlayer</string>
    <string name="sermons">Sermons</string>
    <string name="bibleAudio">Bible\nAudio</string>
    <string name="notify_bible">Notify bible</string>
    <string name="prayer_request">Prayer request</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="album">Album</string>
    <string name="sharikov_book" translatable="false">Sharikov SongBook</string>
    <string name="please_restart">Please restart the app to apply the changes correctly !</string>
    <string name="ok">OK</string>
    <string name="title_notif_bible">Reminder:</string>
    <string name="msg_notif_bible">Read the Bible and grow in His World!</string>
    <string name="title_notif_pray">Reminder:</string>
    <string name="msg_notif_pray">See the latest prayer requests</string>
    <string name="album1" translatable="false">ДЕРЖИ МЕНЯ</string>
    <string name="album2" translatable="false">ЛИШЬ ИИСУС</string>
    <string name="album3" translatable="false">ТЫ МОЯ ЖИЗНЬ</string>
    <string name="album4" translatable="false">БЕЗ ТЕБЯ ТЕМНО</string>
    <string name="instrument" translatable="false">Instrumentals</string>
    <string-array name="bookTitle">
        <item>Sharikov Songbook</item>
        <item>You Are My Hiding Place</item>
        <item>Берегите любовь!</item>
        <item>Боже, в мире суеты</item>
        <item>В минуты тяжелой</item>
        <item>А я люблю весенние дожди</item>
        <item>Вот Божий Сын</item>
        <item>Время спешит</item>
        <item>Говорит Господь: "Приди"</item>
        <item>Дай мне сил</item>































    </string-array>
    <string-array name="bookLink">
        <item>Sharikov Songbook.pdf</item>
        <item>YOU-ARE-MY-HIDING-PLACE-Full-Score.pdf</item>
        <item>Берегите-любовь-Full-Score.pdf</item>
        <item>Боже-в-мире-суеты-Full-Score.pdf</item>
        <item>В-минуты-тяжелой-утраты-Full-Score.pdf</item>
        <item>А-я-люблю-весенние-дожди-Full-Score-1.pdf</item>
        <item>Вот-Божий-Сын-Full-Score.pdf</item>
        <item>Время-спешит-Full-Score.pdf</item>
        <item>Говорит-Господь-Приди-Full-Score.pdf</item>
        <item>Дай-мне-сил-держаться-Full-Score.pdf</item>







































    </string-array>
</resources>