<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:textSize="10sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/album1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/album1"
        android:textSize="20sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/label"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white"
        android:layout_below="@id/album1"/>
    <TextView
        android:id="@+id/album2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/album2"
        android:textSize="20sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/album1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white"
        android:layout_below="@id/album2"/>
    <TextView
        android:id="@+id/album3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/album3"
        android:textSize="20sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/album2"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white"
        android:layout_below="@id/album3"/>
    <TextView
        android:id="@+id/album4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/album4"
        android:textSize="20sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/album3"/>

  </RelativeLayout>